# vims-platform

./: .env.example  .gitignore  README.md  pyproject.toml  pytest.ini
alembic/: env.py
app/: main.py
app/api/v1/: router.py
app/api/v1/endpoints/: admin.py  auth.py  volunteer.py
app/core/: config.py  database.py  security.py
app/models/: __init__.py  base.py  enums.py  opportunity.py  user.py
app/schemas/: __init__.py  auth.py  common.py  opportunity.py  volunteer.py
app/services/: application_service.py  opportunity_service.py  user_service.py  volunteer_service.py
app/utils/: exceptions.py  pagination.py
docs/: deployment.md
tests/: conftest.py  test_auth.py  test_opportunity_service.py  test_optimized_suite.py
