[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "volunteer-information-management-system"
version = "1.0.0"
description = "Production-ready FastAPI backend for volunteer management"
requires-python = ">=3.10"

dependencies = [
    # Web framework
    "fastapi==0.115.5",
    "uvicorn[standard]==0.32.1",

    # Database
    "sqlalchemy[asyncio]==2.0.36",
    "asyncpg==0.30.0",
    "psycopg2-binary==2.9.10",     # sync driver for Alembic

    # Migrations
    "alembic==1.14.0",

    # Settings / validation
    "pydantic>=2.10.3",
    "pydantic-settings>=2.6.1",
    "pydantic[email]>=2.10.3",

    # Security
    "python-jose[cryptography]==3.3.0",
    "PyJWT==2.10.1",
    "passlib[argon2]==1.7.4",
    "argon2-cffi==23.1.0",

    # HTTP form parsing
    "python-multipart==0.0.18",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "pytest-asyncio==0.24.0",
    "httpx==0.27.2",
    "anyio==4.7.0",
    "factory-boy==3.3.1",
    "ruff==0.8.4",
    "mypy==1.13.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
# Match this to your 'session' scoped fixtures
asyncio_default_fixture_loop_scope = "session"


[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "I", "UP", "B", "C4", "SIM"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]
[tool.setuptools.packages.find]
exclude = ["alembic*", "tests*"]
